--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-number-format": "^4.8.0",
     "react-router-dom": "^6.20.1",
     "react-scroll-parallax": "^3.4.5",
-    "react-spinners": "^0.13.8"
+    "react-spinners": "^0.13.8",
+    "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
