--- a/package.json
+++ b/package.json
@@ -18,14 +18,17 @@
     "@szhsin/react-accordion": "^1.2.3",
     "axios": "^1.6.7",
     "framer-motion": "^10.16.12",
+    "hugeicons-react": "^0.2.0",
     "lottie-react": "^2.4.0",
     "react": "^18.2.0",
     "react-amcharts4": "^0.0.4",
+    "react-blockies": "^1.4.1",
     "react-countup": "^6.5.0",
     "react-dom": "^18.2.0",
-    "react-number-format": "^4.8.0",
+    "react-number-format": "^5.3.1",
     "react-router-dom": "^6.20.1",
     "react-scroll-parallax": "^3.4.5",
+    "react-shimmer-effects-18": "^1.0.4",
     "react-spinners": "^0.13.8",
     "typewriter-effect": "^2.21.0"
   },
