--- a/package.json
+++ b/package.json
@@ -12,12 +12,17 @@
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@enzoferey/ethers-error-parser": "^0.2.3",
     "@mui/icons-material": "^5.15.5",
     "@mui/material": "^5.15.5",
     "@splinetool/react-spline": "^2.2.6",
     "@szhsin/react-accordion": "^1.2.3",
+    "@tanstack/react-query": "^5.40.1",
+    "@web3modal/ethers": "^4.2.3",
+    "@web3modal/wagmi": "^4.2.3",
     "axios": "^1.6.8",
     "date-fns": "^2.30.0",
+    "ethers": "^6.13.0",
     "framer-motion": "^10.18.0",
     "hugeicons-react": "^0.2.0",
     "lottie-react": "^2.4.0",
@@ -32,7 +37,9 @@
     "react-shimmer-effects-18": "^1.0.4",
     "react-spinners": "^0.13.8",
     "react-toastify": "^10.0.5",
-    "typewriter-effect": "^2.21.0"
+    "typewriter-effect": "^2.21.0",
+    "viem": "^2.13.7",
+    "wagmi": "^2.9.10"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
