--- a/package.json
+++ b/package.json
@@ -31,12 +31,14 @@
     "react-blockies": "^1.4.1",
     "react-countup": "^6.5.0",
     "react-dom": "^18.2.0",
+    "react-fast-marquee": "^1.6.5",
     "react-number-format": "^5.3.1",
     "react-router-dom": "^6.20.1",
     "react-scroll-parallax": "^3.4.5",
     "react-shimmer-effects-18": "^1.0.4",
     "react-spinners": "^0.13.8",
     "react-toastify": "^10.0.5",
+    "swiper": "^10.2.0",
     "typewriter-effect": "^2.21.0",
     "viem": "^2.13.7",
     "wagmi": "^2.9.10"
